Switch to Poppins font and add Google Fonts support
Replaced the default font with Poppins throughout the app, added the Poppins-Regular.ttf font file, and integrated the google_fonts package. Updated main.dart to use GoogleFonts.poppins, adjusted styles, and registered the path_provider plugin for macOS. Updated dependencies in pubspec.yaml and pubspec.lock accordingly.

--- a/health_diet_app/pubspec.yaml
+++ b/health_diet_app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # Material Design Icons
   flutter_material_design_icons: ^1.1.7447
 
+  # Google Fonts
+  google_fonts: ^6.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
