--- a/health_diet_app/pubspec.yaml
+++ b/health_diet_app/pubspec.yaml
@@ -65,6 +65,11 @@ flutter:
   assets:
     - assets/
 
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
